# kpi-performance-summary

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  INTERVIEW_PREP.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: deps.py  main.py  observability.py
apps/api/app/api/v1/: companies.py  estimates.py  favorites.py  health.py  kpis.py  search.py
apps/api/data/: kpi_sample_2000.csv
apps/api/scripts/: init_db.py  seed.py
apps/api/tests/: conftest.py  test_api.py  test_db.py  test_services.py  test_smoke.py
apps/mcp/: Dockerfile  README.md  pyproject.toml  server.py
apps/mcp/tests/: conftest.py  test_tools.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: FavoriteButton.test.tsx  FavoriteButton.tsx  KpiChart.test.tsx  KpiChart.tsx  SearchBar.test.tsx  SearchBar.tsx
frontend/src/lib/: format.test.ts  format.ts  pctFilter.test.ts  pctFilter.ts
frontend/src/pages/: CompaniesTable.tsx  CompanyDetail.tsx  Dashboard.tsx  Favorites.tsx  KpiDetail.tsx
frontend/src/test/: setup.ts
