# uv workspace root for the KPI Performance Summary monorepo.
#
# This is a *virtual* root (package = false): it isn't built or installed itself,
# it just ties the three Python packages together so a single `uv sync` provisions
# one shared .venv with all of them editable, plus the test tooling.
#
#   packages/core  → shared domain logic (kpi_perf_summary_core)
#   apps/api       → FastAPI adapter
#   apps/mcp       → FastMCP adapter
#
# The cross-package dependency on kpi-perf-summary-core is wired via
# [tool.uv.sources] below; those sources are inherited by every workspace member,
# so the apps resolve `core` from the local checkout rather than PyPI.
[project]
name = "kpi-performance-summary"
version = "0.1.0"
description = "Public Investor KPI Performance Summary — uv workspace (core + API + MCP)"
requires-python = ">=3.11"
dependencies = [
    "kpi-perf-summary-core",
    "kpi-perf-summary-api",
    "kpi-perf-summary-mcp",
]

# Installed by `uv sync` for local development/testing (api + mcp suites).
[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.15.18",
]

# Lets `uv run pytest` from the repo root collect both backend suites with the
# same async settings the per-app configs use (each app also keeps its own copy
# so `pytest` still works when run from inside apps/api or apps/mcp, or in Docker).
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "apps/mcp/tests"]

# Lint + format for the whole workspace (run via `uv run ruff ...`, pre-commit, and CI).
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle/pyflakes (default) + import sorting, pyupgrade, bugbear, warnings.
select = ["E", "F", "W", "I", "UP", "B"]
# UP042 wants StrEnum, but EstimateType is mapped to a Postgres ENUM by SQLAlchemy;
# keeping str+Enum avoids changing that mapping's semantics.
ignore = ["UP042"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses these as argument defaults by design (Query/Depends/Header/...), so
# B008 ("no function calls in defaults") is a false positive for them.
extend-immutable-calls = [
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Depends",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B"]  # allow pytest idioms (fixtures, asserts) without bugbear nits

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "apps/api", "apps/mcp"]

[tool.uv.sources]
kpi-perf-summary-core = { workspace = true }
kpi-perf-summary-api = { workspace = true }
kpi-perf-summary-mcp = { workspace = true }
